<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">


    <View style="@style/Divider" android:id="@+id/horizontal_1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <TextView android:id="@+id/subscriber_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:text="@string/subscriber_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_left" android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_1" android:layout_marginTop="@dimen/switch_margin"/>

    <Switch android:id="@+id/subscriber_log"
        android:text="@string/subscriber_log"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@+id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/subscriber_title" android:layout_marginTop="@dimen/switch_margin"/>

    <Switch android:id="@+id/subscriber_tcp"
        android:text="@string/subscriber_tcp"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@+id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/subscriber_log" android:layout_marginTop="@dimen/switch_margin"/>



    <View style="@style/Divider" android:id="@+id/horizontal_2"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/subscriber_tcp" android:layout_marginTop="@dimen/switch_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <TextView android:id="@+id/publisher_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:text="@string/publisher_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_left" android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_2" android:layout_marginTop="@dimen/switch_margin"/>

    <TextView android:id="@+id/publisher_sampleTime"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:text="@string/publisher_sampleTime"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_center" android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/publisher_title" android:layout_marginTop="@dimen/switch_margin"/>

    <Switch android:id="@+id/publisher_linearAcceleration"
        android:text="@string/publisher_linearAcceleration" android:textAlignment="textEnd"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/publisher_title" android:layout_marginTop="@dimen/switch_margin"/>
    <EditText android:id="@+id/publisher_linearAcceleration_time"
        android:layout_width="@dimen/timeSample_width"
        android:layout_height="@dimen/timeSample_height"
        android:inputType="numberSigned"
        android:ems="10"
        android:hint="@string/sampleTime_hint"
        app:layout_constraintStart_toEndOf="@id/guide_center" android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/publisher_linearAcceleration"/>

    <Switch android:id="@+id/publisher_rotationVector"
        android:text="@string/publisher_rotationVector" android:textAlignment="textEnd"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/publisher_linearAcceleration" android:layout_marginTop="@dimen/switch_margin"/>
    <EditText android:id="@+id/publisher_rotationVector_time"
        android:layout_width="@dimen/timeSample_width"
        android:layout_height="@dimen/timeSample_height"
        android:inputType="numberSigned"
        android:ems="10"
        android:hint="@string/sampleTime_hint"
        app:layout_constraintStart_toEndOf="@id/guide_center" android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/publisher_rotationVector"/>

    <Switch android:id="@+id/publisher_acceleration"
        android:text="@string/publisher_acceleration" android:textAlignment="textEnd"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/publisher_rotationVector" android:layout_marginTop="@dimen/switch_margin"/>
    <EditText android:id="@+id/publisher_acceleration_time"
        android:layout_width="@dimen/timeSample_width"
        android:layout_height="@dimen/timeSample_height"
        android:inputType="numberSigned"
        android:ems="10"
        android:hint="@string/sampleTime_hint"
        app:layout_constraintStart_toEndOf="@id/guide_center" android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/publisher_acceleration"/>

    <Switch android:id="@+id/publisher_gyroscope"
        android:text="@string/publisher_gyroscope" android:textAlignment="textEnd"
        android:layout_width="wrap_content" android:layout_height="@dimen/timeSample_height"
        app:layout_constraintEnd_toStartOf="@id/guide_center" android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/publisher_acceleration" android:layout_marginTop="@dimen/switch_margin"/>
    <EditText android:id="@+id/publisher_gyroscope_time"
        android:layout_width="@dimen/timeSample_width"
        android:layout_height="@dimen/timeSample_height"
        android:inputType="numberSigned"
        android:ems="10"
        android:hint="@string/sampleTime_hint"
        app:layout_constraintStart_toEndOf="@id/guide_center" android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="@id/publisher_gyroscope"/>



    <View style="@style/Divider" android:id="@+id/horizontal_3"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/publisher_gyroscope" android:layout_marginTop="@dimen/switch_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>

    <TextView android:id="@+id/settings_title"
        android:textAppearance="@android:style/TextAppearance.Material.Headline"
        android:text="@string/settings_title"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/guide_left" android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/horizontal_3" android:layout_marginTop="@dimen/switch_margin"/>

    <EditText android:id="@+id/ip"
        android:layout_width="@dimen/ip_width"
        android:layout_height="wrap_content"
        android:inputType="number|numberDecimal"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/ip_hint"
        app:layout_constraintTop_toBottomOf="@id/settings_title" android:layout_marginTop="@dimen/switch_margin"
        app:layout_constraintRight_toLeftOf="@id/guide_center" android:layout_marginEnd="8dp"/>

    <TextView android:id="@+id/ip_title"
        android:text="@string/ip_title" android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ip" app:layout_constraintBottom_toBottomOf="@id/ip"
        app:layout_constraintEnd_toStartOf="@id/ip" android:layout_marginEnd="8dp"/>

    <EditText android:id="@+id/port"
        android:layout_width="@dimen/port_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/port_hint"
        app:layout_constraintTop_toBottomOf="@id/ip" android:layout_marginTop="@dimen/switch_margin"
        app:layout_constraintRight_toLeftOf="@id/guide_center" android:layout_marginEnd="8dp"/>

    <TextView android:id="@+id/port_title"
        android:text="@string/port_title" android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/port" app:layout_constraintBottom_toBottomOf="@id/port"
        app:layout_constraintEnd_toStartOf="@id/port" android:layout_marginEnd="8dp"/>


    <android.support.constraint.Guideline
        android:id="@+id/guide_left"
        android:orientation="vertical"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin"/>
    <android.support.constraint.Guideline
        android:id="@+id/guide_right"
        android:orientation="vertical"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintGuide_end="@dimen/activity_horizontal_margin"/>
    <android.support.constraint.Guideline android:id="@+id/guide_center"
        android:orientation="vertical"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        app:layout_constraintGuide_percent=".6"/>

</android.support.constraint.ConstraintLayout>